@@ -1,3 +1,10 @@
+2012-01-06 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinylisp.el (tinylisp-get-symbol): Delete newlines.
+	(tinylisp--regexp-function): Allow whitespace at the beginning.
+	(tinylisp-jump-to-definition): Allow whitespace at the beginning
+	of variable `f-re'.
+
 2012-01-05 Thu  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydesk.el: REMOVED FROM THIS PROJECT. Now
